# imro-neuropixels

./: .gitignore  DEVELOPERS.md  DOCUMENTATION_AUDIT.md  LICENSE  MANIFEST.in  QUICKSTART.md  README.md  pyproject.toml  requirements.txt  setup.py
docs/: ARCHITECTURE.md  ISSUES.md  imro_algorithm.md  imro_dev_guide_A_overview.md  imro_dev_guide_B_howto.md  imro_user_guide_A_tutorial.md
examples/: 20mm.imro  20mm.json  single_column.imro
imro_generator/: __init__.py
imro_generator/core/: imro_generator.py
imro_generator/gui/: imro_config_gui.py
imro_generator/settings/probes/: PROBE_FORMAT.md  probes.csv
imro_generator/settings/probes/npx1.0-nhp/: probe.json
settings/probes/: PROBE_FORMAT.md
settings/probes/npx1.0-nhp/: channelmap.csv
tests/: test_assignment_modes.py  test_depth_algorithm.py
