[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "imro-neuropixels"
version = "0.1.0"
description = "NP1.0 Neuropixels probe configuration and IMRO/Kilosort file generator with GUI"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Vitaly Lerner", email = "vitaly.lerner@mail.huji.ac.il" },
]
keywords = ["neuropixels", "imro", "spikeglx", "openephys", "kilosort", "electrophysiology", "neuroscience"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "PyQt5>=5.15.0",
    "pyqtgraph>=0.12.0",
    "numpy>=1.20.0",
    "pandas>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "build>=1.0",
    "twine>=4.0",
]

[project.urls]
Homepage = "https://github.com/vitalylerner/imro-neuropixels"
Repository = "https://github.com/vitalylerner/imro-neuropixels"
Issues = "https://github.com/vitalylerner/imro-neuropixels/issues"

[project.scripts]
imro-gui = "imro_generator.gui.imro_config_gui:main"

[tool.setuptools.packages.find]
include = ["imro_generator*"]

[tool.setuptools.package-data]
imro_generator = [
    "settings/probes/*.csv",
    "settings/probes/*.md",
    "settings/probes/**/*.csv",
    "settings/probes/**/*.md",
    "settings/probes/**/*.json",
]
